[project]
name = "cloudflare-analytics"
version = "0.1.1"
description = "Cloudflare Analytics GraphQL API client"
keywords = ["cloudflare", "analytics", "graphql"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/cloudflare-analytics" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
cloudflare-analytics = "cloudflare_analytics:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = ["pytest>=8.3.3","pyright>=1.1.380","ruff>=0.8.0"]

